tests/fixtures/compile_errors/external_call_type_error.fe
contract Foo:
    pub def bar(a: u256):
        pass

contract FooProxy:
    pub def baz():
        Foo(address(0)).bar("hello world")